--- a/ASI.Basecode.Data/ASI.Basecode.Data.csproj
+++ b/ASI.Basecode.Data/ASI.Basecode.Data.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="ZXing.Net" Version="0.16.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ASI.Basecode.Resources\ASI.Basecode.Resources.csproj" />
+  </ItemGroup>
+
 </Project>
