--- a/ASI.Basecode.Services/ASI.Basecode.Services.csproj
+++ b/ASI.Basecode.Services/ASI.Basecode.Services.csproj
@@ -13,6 +13,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Localization" Version="2.3.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.6" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.6" />
+    <PackageReference Include="Supabase" Version="1.1.1" />
+    <PackageReference Include="Supabase.Storage" Version="2.0.2" />
   </ItemGroup>
 
   <ItemGroup>
