--- a/ASI.Basecode.Data/ASI.Basecode.Data.csproj
+++ b/ASI.Basecode.Data/ASI.Basecode.Data.csproj
@@ -8,7 +8,7 @@
     <PackageReference Include="CsvHelper" Version="33.1.0" />
     <PackageReference Include="EFCore.BulkExtensions" Version="9.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
-	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.6" >
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.6">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -25,6 +25,10 @@
     <PackageReference Include="NUlid" Version="1.7.3" />
     <PackageReference Include="System.Drawing.Common" Version="9.0.6" />
     <PackageReference Include="ZXing.Net" Version="0.16.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ASI.Basecode.Resources\ASI.Basecode.Resources.csproj" />
   </ItemGroup>
 
 </Project>
