--- a/Readiculous.Services/ASI - Backup.Basecode.Services.csproj
+++ b/Readiculous.Services/ASI - Backup.Basecode.Services.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ASI.Basecode.Data\ASI.Basecode.Data.csproj" />
+    <ProjectReference Include="..\ASI.Basecode.Data\Readiculous.Data.csproj" />
   </ItemGroup>
 
   <ItemGroup>
