--- a/Readiculous.WebApp/ASI - Backup.Basecode.WebApp.csproj
+++ b/Readiculous.WebApp/ASI - Backup.Basecode.WebApp.csproj
@@ -31,6 +31,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ASI.Basecode.Services\ASI.Basecode.Services.csproj" />
+    <ProjectReference Include="..\ASI.Basecode.Services\Readiculous.Services.csproj" />
   </ItemGroup>
 </Project>
