--- a/Readiculous.Services/Readiculous.Services.csproj
+++ b/Readiculous.Services/Readiculous.Services.csproj
@@ -10,8 +10,8 @@
     <PackageReference Include="EFCore.BulkExtensions" Version="9.0.1" />
     <PackageReference Include="Hangfire.Core" Version="1.8.20" />
     <PackageReference Include="LinqKit" Version="1.3.8" />
-    <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Localization" Version="2.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="9.0.6" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.6" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.6" />
     <PackageReference Include="Supabase" Version="1.1.1" />
