--- a/Readiculous.WebApp/appsettings.json
+++ b/Readiculous.WebApp/appsettings.json
@@ -29,14 +29,14 @@
     "AutoConnectRealtime": false,
     "AutoRefreshToken": true
   },
-  /*Edit this with your email*/
+
   "SmtpSettings": {
     "Host": "smtp.gmail.com",
     "Port": "587",
     "EnableSsl": "true",
-    "Username": "noted2001@gmail.com",
-    "Password": "bjtyheffylktszmb",
-    "FromEmail": "noted2001@gmail.com",
+    "Username": "readiculousteam@gmail.com",
+    "Password": "uildxnygobieoysj",
+    "FromEmail": "readiculousteam@gmail.com",
     "FromName": "Readiculous Team"
   }
 }
