Added requested changes

--- a/Readiculous.WebApp/appsettings.json
+++ b/Readiculous.WebApp/appsettings.json
@@ -35,7 +35,7 @@
     "Port": "587",
     "EnableSsl": "true",
     "Username": "readiculousteam@gmail.com",
-    "Password": "uildxnygobieoysj",
+    "Password": "%SMTP_PASSWORD%",
     "FromEmail": "readiculousteam@gmail.com",
     "FromName": "Readiculous Team"
   }
