--- a/Readiculous.WebApp/Readiculous.WebApp.csproj
+++ b/Readiculous.WebApp/Readiculous.WebApp.csproj
@@ -7,14 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="wwwroot\js\NewFolder\**" />
-    <Content Remove="wwwroot\js\NewFolder\**" />
-    <EmbeddedResource Remove="wwwroot\js\NewFolder\**" />
-    <None Remove="wwwroot\js\NewFolder\**" />
-    <TypeScriptCompile Remove="wwwroot\js\NewFolder\**" />
-  </ItemGroup>
-
-  <ItemGroup>
     <None Remove="appsettings.json.rej" />
   </ItemGroup>
 
@@ -47,5 +39,9 @@
   <ItemGroup>
     <ProjectReference Include="..\Readiculous.Resources\Readiculous.Resources.csproj" />
     <ProjectReference Include="..\Readiculous.Services\Readiculous.Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\js\authenticationModals\" />
   </ItemGroup>
 </Project>
