--- a/Readiculous.Services/Readiculous.Services.csproj
+++ b/Readiculous.Services/Readiculous.Services.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.6" />
     <PackageReference Include="Supabase" Version="1.1.1" />
     <PackageReference Include="Supabase.Storage" Version="2.0.2" />
+    <PackageReference Include="X.PagedList" Version="10.5.7" />
   </ItemGroup>
 
   <ItemGroup>
