--- a/Readiculous.WebApp/Readiculous.WebApp.csproj
+++ b/Readiculous.WebApp/Readiculous.WebApp.csproj
@@ -34,6 +34,7 @@
     </PackageReference>
     <PackageReference Include="Supabase" Version="1.1.1" />
     <PackageReference Include="Supabase.Storage" Version="2.0.2" />
+    <PackageReference Include="X.PagedList" Version="10.5.7" />
   </ItemGroup>
 
   <ItemGroup>
